fixing some layout issues on ghpages

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,7 +89,7 @@ body {
 /* Supporting marketing content */
 .marketing {
     margin: 40px 0;
-    height: 670px;
+    height: 700px;
 }
 
 .marketing p + h4 {
@@ -154,7 +154,7 @@ body {
     display: inline-block;
     width: 160px;
     margin: 12px auto;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 
